Bug 177022 - Fallback for "When entering a new folder: Jump to first new" incorrect
Summary: Fallback for "When entering a new folder: Jump to first new" incorrect
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new message list (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: Szymon Stefanek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-05 23:20 UTC by kgw
Modified: 2008-12-10 03:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kgw 2008-12-05 23:20:09 UTC
Version:            (using Devel)
Installed from:    Compiled sources

The fix for #176104 seems to have introduced a regression (at least the behavior is different from the KDE3-kmail). If there is no new message in the entered folder there is NO selection whatsoever, the scrollbar is placed randomly within the folder. IMHO the last selected message should be the fallback in this case.
Comment 1 Szymon Stefanek 2008-12-10 03:57:33 UTC
SVN commit 895152 by stefanek:

Message pre-selection fallbacks from new to unread and from unread to last selected.

BUG: 177022
BUG: 177085



 M  +5 -2      enums.h  
 M  +24 -8     model.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=895152