Message pre-selection fallbacks from new to unread and from unread to last selected.

BUG: 177022
BUG: 177085


svn path=/trunk/KDE/kdepim/; revision=895152